--- a/app/src/main/res/layout/rvc_payment.xml
+++ b/app/src/main/res/layout/rvc_payment.xml
@@ -4,8 +4,7 @@
     android:id="@+id/clPayment"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:layout_marginTop="2dp"
-    android:layout_marginBottom="5dp"
+    android:layout_margin="2dp"
     android:background="@color/white"
     android:orientation="vertical">
 
