--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:text="Ödeme Tipi Ekle"
+        android:text="ÖDEME TİPİ EKLE"
+        android:textStyle="normal"
+        android:textAllCaps="false"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/rvPaymentTypeList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
