--- a/app/src/main/res/layout/rvc_payment_type.xml
+++ b/app/src/main/res/layout/rvc_payment_type.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/clPaymentType"
     android:layout_width="match_parent"
-    android:layout_marginTop="2dp"
-    android:layout_marginBottom="5dp"
+    android:layout_margin="2dp"
     android:layout_height="72dp"
     android:background="@color/white"
     android:clickable="true">
@@ -36,7 +35,7 @@
         android:layout_marginTop="5dp"
         android:text="Payment Type"
         android:textColor="@color/black"
-        android:textSize="15sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/img1"
         app:layout_constraintTop_toTopOf="parent"
@@ -50,7 +49,7 @@
         android:layout_marginBottom="5dp"
         android:text="Period"
         android:textColor="@color/black"
-        android:textSize="12sp"
+        android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/img1"
         app:layout_constraintTop_toBottomOf="@+id/txtTypes"
         app:layout_constraintVertical_weight="3"
@@ -65,7 +64,7 @@
         android:layout_marginStart="24dp"
         android:text="PeriodDay"
         android:textColor="@color/black"
-        android:textSize="12sp"
+        android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/img1"
         app:layout_constraintTop_toBottomOf="@+id/txtTypePeriod"
         app:layout_constraintVertical_weight="3"
@@ -79,8 +78,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:text="Add Payment"
+        android:layout_marginEnd="7dp"
+        android:text="Ödeme Ekle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"
